add, advance on hw1

--- a/geometria/tarea1/tarea1.ipynb
+++ b/geometria/tarea1/tarea1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write down a code able to identify whether a pair of segments share points.\n",
+    "1. (1 point). Write down a code able to identify whether a pair of segments share points.\n",
     "Three possible answers should be available: \n",
     "- segments do not intersect.\n",
     "- segments do intersect giving the intersection point.\n",
@@ -17,14 +17,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#external dependencies \n",
     "import numpy as np\n",
+    "from typing import  List\n",
+    "from itertools import combinations\n",
+    "\n",
+    "#custom dependencies\n",
     "from segment import Segment\n",
     "from vector import Vector\n",
+    "from plotter import VectorPlotter as vp\n",
+    "from plotter import SegmentPlotter as sp\n",
     "\n",
     "S1 = Segment(Vector(np.array([[1],[2]])), Vector(np.array([[3],[4]])))\n",
     "S2 = Segment(Vector(np.array([[3],[4]])), Vector(np.array([[5],[6]])))\n",
     "S3 = Segment(Vector(np.array([[2],[3]])), Vector(np.array([[5],[6]])))\n",
-    "S4 = Segment(Vector(np.array([[4],[5]])), Vector(np.array([[5],[6]])))\n"
+    "S4 = Segment(Vector(np.array([[4],[5]])), Vector(np.array([[5],[6]])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use your code to evaluate intersections of S1 with S2 , S3 and S4 ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "julia"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sp.plot_many([S1, S2, S3, S4], with_labels = True, title = \"The 4 segments\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To evaluate the intersections of these segments and check the correctness of the code developed until now lets build a brutforcing approach that uses the methods I've built until now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "julia"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def find_intersections_by_brute_force(segments: List[Segments]) -> List[Vector]:\n",
+    "\n",
+    "    \"\"\"Find the intersections of a list of segments by brute force.\"\"\"\n",
+    "\n",
+    "    combinations = list(itertools.combinations(segments, 2))\n",
+    "    intersections = []\n",
+    "\n",
+    "    for combination in combinations:\n",
+    "\n",
+    "        s1 = combination[0]\n",
+    "        s2 = combination[1]\n",
+    "\n",
+    "        if s1.segments_intersect(s2):\n",
+    "\n",
+    "            # Find the intersection point (if any)\n",
+    "            intersection = s1.find_intersection(s2)\n",
+    "\n",
+    "            # Find the intersection on endpoints (if any)\n",
+    "            intersection_on_endpoints = s1.find_intersection_on_endpoints(s2)\n",
+    "\n",
+    "            # Find the intersection on segments (if any)\n",
+    "            intersection_on_segments = s1.find_interval_intersection(s2)\n",
+    "            \n",
+    "            if intersection_on_segments is not None:\n",
+    "                intersections.append(intersection_on_segments)\n",
+    "            elif intersection_on_endpoints is not None:\n",
+    "                intersections.append(intersection_on_endpoints)\n",
+    "            else:\n",
+    "                intersections.append(intersection)\n",
+    "\n",
+    "    return intersections\n",
+    "\n",
+    "I = find_intersections_by_brute_force([S1, S2, S3, S4])\n",
+    "sp.plot_many_with_intersections(segments = [S1, S2, S3, S4],\n",
+    "                                intersections = I,\n",
+    "                                with_labels = True,\n",
+    "                                title = \"The 4 segments, and their intersections\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. (2 points). Generate a set of points using the following code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "julia"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "np.random.seed(69)\n",
+    "X = np.random.rand(20, 2)"
    ]
   }
  ],
