update, started working on splines, and updated the secant method to a working version

--- a/numerico/clase4/secant_method.ipynb
+++ b/numerico/clase4/secant_method.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "f (generic function with 2 methods)"
+       "f3 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -61,18 +61,26 @@
    "source": [
     "function f(x::Float64)::Float64\n",
     "    return exp(x)*cos(x) - x^2 + 3x\n",
+    "end\n",
+    "\n",
+    "function f2(x::Float64)::Float64\n",
+    "    return x^5 - 2*x^3 - log(x)\n",
+    "end\n",
+    "\n",
+    "function f3(x::Float64)::Float64\n",
+    "    return x^3 + 2*x^2 + 10*x -20\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "find_segment_root (generic function with 2 methods)"
+       "find_segment_root (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -84,29 +92,19 @@
     "    \"\"\"\n",
     "        Finds the root of the segments that join (x0, f(x0)) and (x1, f(x1))\n",
     "    \"\"\"\n",
-    "    a = f(x0)\n",
-    "    b = f(x1)\n",
-    "\n",
-    "    # finds the alpha at which the line that interpolates (x0, f(x0)) and (x1, f(x1))\n",
-    "    # intersects the x-axis \n",
-    "    alpha =  -a/(b - a)\n",
-    "\n",
-    "    # with this alpha we can get the value of x at which the line intersects the x-axis\n",
-    "    x = alpha*x0 + (1 - alpha)*x1\n",
-    "\n",
-    "    return x\n",
+    "    return x1 - f(x1) * (x1 - x0) / (f(x1) - f(x0))\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "secant_method (generic function with 2 methods)"
+       "secant_method (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -151,22 +149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root not found with tolerance 4.46417075274254e24\n"
+      "Root found at 1.3688081078213723 with tolerance 1.0483248047421512e-8\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2-element Vector{Float64}:\n",
-       " -2.4318238341536045e12\n",
-       " -3.2214807019595366e12"
+       "1.3688081075729086"
       ]
      },
      "metadata": {},
@@ -174,12 +170,13 @@
     }
    ],
    "source": [
-    "x0 = -1.0\n",
-    "x1 = 1.0\n",
+    "x0 = 1.2\n",
+    "x1 = 1.6\n",
     "tol = 1e-5\n",
     "maxiter = 100\n",
     "\n",
-    "secant_method(f, x0, x1, tol, maxiter, true)"
+    "start, finish = secant_method(f3, x0, x1, tol, maxiter, true)\n",
+    "sum( [start, finish] )/2"
    ]
   }
  ],
