--- a/numerico/clase6/splines.ipynb
+++ b/numerico/clase6/splines.ipynb
@@ -4,18 +4,195 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La idea del spline cúbico es en vez de hacer una función que me de todos los puntos, lo que hacemos es hacer n funciones entre punto y punto, y las tratamos de hacer con una interpolación de una función cúbica. "
+    "La idea del spline cúbico es en vez de hacer una función que me de todos los puntos, lo que hacemos es hacer n funciones entre punto y punto, y las tratamos de hacer con una interpolación de una función cúbica. \n",
+    "\n",
+    "Inspirado en este video: https://youtu.be/yOUst2672qo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using DataFrames"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "build_second_order_continuity_coefficients (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Path: clase6/splines.ipynb\n",
+    "function build_first_order_continuity_coefficients(X, points)\n",
+    "\n",
+    "    \"\"\"\n",
+    "        Given a matrix full of zeros, and of size (4n, 4n), where n is the number of polynomials to be found\n",
+    "        for the cubic spline, this function fills the upper part of the matrix corresponding to the equations \n",
+    "        that say that the polynomials must be continuous at the intersections of the intervals.\n",
+    "\n",
+    "        Arguments:\n",
+    "            X: Matrix of zeros of size (4n, 4n)\n",
+    "            points: Vector of points [x,y] to be interpolated\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Check that the matrix is square\n",
+    "    size(X, 1) == size(X, 2) || error(\"The matrix must be square\")\n",
+    "\n",
+    "    row = 1\n",
+    "    n_intervals = length(points) - 1\n",
+    "\n",
+    "    # Fill the upper part of the matrix\n",
+    "    for i in 1:n_intervals\n",
+    "        \n",
+    "        # Columns to be filled\n",
+    "        cols = (4 * i - 3):(4 * i)\n",
+    "        \n",
+    "        # Points to get the coefficients to fill the columns with\n",
+    "        start_point = points[i]\n",
+    "        end_point = points[i + 1]\n",
+    "\n",
+    "        X[row, cols] = [start_point[1]^3, start_point[1]^2, start_point[1][1], 1]\n",
+    "        X[row+1, cols] = [end_point[1]^3, end_point[1]^2, end_point[1], 1]\n",
+    "        row += 2\n",
+    "    end\n",
+    "    \n",
+    "\n",
+    "    return X\n",
+    "end\n",
+    "\n",
+    "function build_second_derivative_continuity_coefficients(X, points)\n",
+    "\n",
+    "    \"\"\"\n",
+    "        Given a matrix full of zeros, and of size (4n, 4n), where n is the number of polynomials to be found\n",
+    "        for the cubic spline, this function fills the middle part of the matrix corresponding to the equations \n",
+    "        that say that the first derivative of the polynomials must be continuous at the intersections of the intervals, \n",
+    "        this is that the first derivative of the polynomial at the end of an interval must be equal to the first derivative\n",
+    "        of the polynomial at the beginning of the next interval.\n",
+    "\n",
+    "        Arguments:\n",
+    "            X: Matrix of zeros of size (4n, 4n)\n",
+    "            points: Vector of points [x,y] to be interpolated\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Check that the matrix is square\n",
+    "    size(X, 1) == size(X, 2) || error(\"The matrix must be square\")\n",
+    "\n",
+    "    n_intervals = length(points) - 2\n",
+    "    row = (n_intervals+2) * 2 - 1\n",
+    "\n",
+    "    # Fill the upper part of the matrix\n",
+    "    for i in 1:n_intervals\n",
+    "        \n",
+    "        # Columns to be filled\n",
+    "        col1 = (4 * i - 3):(4 * i)\n",
+    "        col2 = (4 * i + 1):(4 * i + 4)\n",
+    "\n",
+    "        # Points to get the coefficients to fill the columns with\n",
+    "        start_point = points[i]\n",
+    "        end_point = points[i + 1]\n",
+    "\n",
+    "        X[row, col1] = [-3*start_point[1]^2, -2*start_point[1], -1, 0]\n",
+    "        X[row, col2] = [ 3*end_point[1]^2,    2*end_point[1],    1, 0]\n",
+    "\n",
+    "        row += 1\n",
+    "    end\n",
+    "    \n",
+    "\n",
+    "    return X\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12×12 Matrix{Float64}:\n",
+       "  27.0   9.0   3.0  1.0   0.0   0.0   0.0  0.0    0.0   0.0  0.0  0.0\n",
+       "   1.0   1.0   1.0  1.0   0.0   0.0   0.0  0.0    0.0   0.0  0.0  0.0\n",
+       "   0.0   0.0   0.0  0.0   1.0   1.0   1.0  1.0    0.0   0.0  0.0  0.0\n",
+       "   0.0   0.0   0.0  0.0   8.0   4.0   2.0  1.0    0.0   0.0  0.0  0.0\n",
+       "   0.0   0.0   0.0  0.0   0.0   0.0   0.0  0.0    8.0   4.0  2.0  1.0\n",
+       "   0.0   0.0   0.0  0.0   0.0   0.0   0.0  0.0  125.0  25.0  5.0  1.0\n",
+       " -27.0  -6.0  -1.0  0.0   3.0   2.0   1.0  0.0    0.0   0.0  0.0  0.0\n",
+       "   0.0   0.0   0.0  0.0  -3.0  -2.0  -1.0  0.0   12.0   4.0  1.0  0.0\n",
+       "   0.0   0.0   0.0  0.0   0.0   0.0   0.0  0.0    0.0   0.0  0.0  0.0\n",
+       "   0.0   0.0   0.0  0.0   0.0   0.0   0.0  0.0    0.0   0.0  0.0  0.0\n",
+       "   0.0   0.0   0.0  0.0   0.0   0.0   0.0  0.0    0.0   0.0  0.0  0.0\n",
+       "   0.0   0.0   0.0  0.0   0.0   0.0   0.0  0.0    0.0   0.0  0.0  0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#list of points to interpolate\n",
+    "points = [[3, 1], [1, 1], [2, 0.5], [5, 0.69]]\n",
+    "\n",
+    "n_intervals = length(points) - 1\n",
+    "\n",
+    "#matrix of zeros of size (4n, 4n)\n",
+    "X = zeros(4 * n_intervals, 4 * n_intervals)\n",
+    "\n",
+    "#fill the upper part of the matrix and print the complete matrix\n",
+    "X = build_first_order_continuity_coefficients(X, points)\n",
+    "X = build_second_derivative_continuity_coefficients(X, points)\n",
+    "#DataFrame(X, :auto)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1:4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "4*1 - 3:4*1"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Julia 1.9.2",
+   "language": "julia",
+   "name": "julia-1.9"
+  },
   "language_info": {
-   "name": "python"
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.9.2"
   },
   "orig_nbformat": 4
  },
