add, today's class

--- a/numerico/clase7P2/numeric_differenciation.ipynb
+++ b/numerico/clase7P2/numeric_differenciation.ipynb
@@ -467,6 +467,113 @@
     "epsilon = 1e-2\n",
     "five_point_numeric_diff_middle(f, x, epsilon)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "three_point_numeric_diff_middle (generic function with 2 methods)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "function three_point_numeric_diff_middle(f::Function, x::Float64, epsilon::Float64, decimal_digits::Integer)::Float64\n",
+    "    \"\"\"\n",
+    "        Three point numeric differenciation using the middle point given a function f,\n",
+    "        a point x and an epsilon.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        f : Function\n",
+    "            Function to be evaluated.\n",
+    "        x : Float64\n",
+    "            Point to be evaluated.\n",
+    "        epsilon : Float64\n",
+    "            Epsilon to be used in the numeric differenciation.\n",
+    "        \n",
+    "        Returns\n",
+    "        -------\n",
+    "        Float64\n",
+    "            Numeric differenciation of f at x using epsilon.\n",
+    "    \"\"\"\n",
+    "    xs = [round(x+epsilon, digits=decimal_digits) , round(x-epsilon, digits=decimal_digits)]\n",
+    "    ys = [round(f(xi + epsilon), digits=decimal_digits) for xi in xs]\n",
+    "\n",
+    "    coefficients = [1, -1]\n",
+    "    denominator = round(2*epsilon, digits=decimal_digits)\n",
+    "    ans = round(sum([cx[1]*cx[2] for cx  in zip(coefficients, ys)])/denominator, digits=decimal_digits)\n",
+    "\n",
+    "    return ans\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "g (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function f(x::Float64)::Float64\n",
+    "    return sin(x)\n",
+    "end\n",
+    "\n",
+    "function g(x::Float64)::Float64\n",
+    "    return cos(x)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximation: 0.617\n",
+      "Exact: 0.6216099682706644\n",
+      "Error: 0.0046099682706644\n"
+     ]
+    }
+   ],
+   "source": [
+    "epsilon = 0.005\n",
+    "x = 0.9\n",
+    "decimal_digits = 5\n",
+    "\n",
+    "approx = three_point_numeric_diff_middle(f, x, epsilon, decimal_digits)\n",
+    "exact = g(x)\n",
+    "\n",
+    "println(\"Approximation: \", approx)\n",
+    "println(\"Exact: \", exact)\n",
+    "println(\"Error: \", abs(approx - exact))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
