--- a/numerico/clase9P2/integration.ipynb
+++ b/numerico/clase9P2/integration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -138,19 +138,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "6-element Vector{Function}:\n",
-       " #25 (generic function with 1 method)\n",
-       " #27 (generic function with 1 method)\n",
-       " #29 (generic function with 1 method)\n",
        " #31 (generic function with 1 method)\n",
        " #33 (generic function with 1 method)\n",
-       " #35 (generic function with 1 method)"
+       " #35 (generic function with 1 method)\n",
+       " #37 (generic function with 1 method)\n",
+       " #39 (generic function with 1 method)\n",
+       " #41 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -179,31 +179,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: Cannot `convert` an object of type Nothing to an object of type Float64\n\nClosest candidates are:\n  convert(::Type{T}, !Matched::LLVM.GenericValue, !Matched::LLVM.LLVMType) where T<:AbstractFloat\n   @ LLVM ~/.julia/packages/LLVM/lq6lJ/src/execution.jl:39\n  convert(::Type{T}, !Matched::LLVM.ConstantFP) where T<:AbstractFloat\n   @ LLVM ~/.julia/packages/LLVM/lq6lJ/src/core/value/constant.jl:111\n  convert(::Type{T}, !Matched::Union{InitialValues.SpecificInitialValue{typeof(*)}, InitialValues.SpecificInitialValue{typeof(Base.mul_prod)}}) where T<:Union{AbstractString, Number}\n   @ InitialValues ~/.julia/packages/InitialValues/OWP8V/src/InitialValues.jl:258\n  ...\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: Cannot `convert` an object of type Nothing to an object of type Float64\n",
-      "\n",
-      "Closest candidates are:\n",
-      "  convert(::Type{T}, !Matched::LLVM.GenericValue, !Matched::LLVM.LLVMType) where T<:AbstractFloat\n",
-      "   @ LLVM ~/.julia/packages/LLVM/lq6lJ/src/execution.jl:39\n",
-      "  convert(::Type{T}, !Matched::LLVM.ConstantFP) where T<:AbstractFloat\n",
-      "   @ LLVM ~/.julia/packages/LLVM/lq6lJ/src/core/value/constant.jl:111\n",
-      "  convert(::Type{T}, !Matched::Union{InitialValues.SpecificInitialValue{typeof(*)}, InitialValues.SpecificInitialValue{typeof(Base.mul_prod)}}) where T<:Union{AbstractString, Number}\n",
-      "   @ InitialValues ~/.julia/packages/InitialValues/OWP8V/src/InitialValues.jl:258\n",
-      "  ...\n",
-      "\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] boole_rule(f::var\"#13#14\", x0::Float64, x1::Float64)\n",
-      "   @ Main ~/Documents/univ/8tavoSemestre/numerico/clase9P2/integration.ipynb:12\n",
-      " [2] top-level scope\n",
-      "   @ ~/Documents/univ/8tavoSemestre/numerico/clase9P2/integration.ipynb:11"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual Integral: 2.6666666666666665\n",
+      "Trapezoidal Approximation: 4.0 Error: 1.3333333333333335\n",
+      "Simpson Rule Approximation: 2.6666666666666665 Error: 0.0\n",
+      "Simpson Fraction Rule Approximation: 2.6666666666666665 Error: 0.0\n",
+      "Boole Rule Approximation: 2.6666666666666665 Error: 0.0\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual Integral: 6.4\n",
+      "Trapezoidal Approximation: 16.0 Error: 9.6\n",
+      "Simpson Rule Approximation: 6.666666666666666 Error: 0.2666666666666657\n",
+      "Simpson Fraction Rule Approximation: 6.518518518518517 Error: 0.11851851851851691\n",
+      "Boole Rule Approximation: 6.4 Error: 0.0\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual Integral: 1.0986122886681098\n",
+      "Trapezoidal Approximation: 1.3333333333333333 Error: 0.23472104466522348\n",
+      "Simpson Rule Approximation: 1.1111111111111112 Error: 0.012498822443001378\n",
+      "Simpson Fraction Rule Approximation: 1.1047619047619046 Error: 0.00614961609379483\n",
+      "Boole Rule Approximation: 1.0992592592592592 Error: 0.0006469705911493762\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual Integral: 2.957885715089195\n",
+      "Trapezoidal Approximation: 3.23606797749979 Error: 0.27818226241059474\n",
+      "Simpson Rule Approximation: 2.9643074089973895 Error: 0.00642169390819447\n",
+      "Simpson Fraction Rule Approximation: 2.960404813240945 Error: 0.002519098151749777\n",
+      "Boole Rule Approximation: 2.957532147519914 Error: 0.0003535675692809548\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual Integral: 1.4161468365471424\n",
+      "Trapezoidal Approximation: 0.9092974268256817 Error: 0.5068494097214606\n",
+      "Simpson Rule Approximation: 1.4250604553524227 Error: 0.008913618805280299\n",
+      "Simpson Fraction Rule Approximation: 1.4200551350312078 Error: 0.003908298484065487\n",
+      "Boole Rule Approximation: 1.416093124714195 Error: 5.371183294733406e-5\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual Integral: 6.38905609893065\n",
+      "Trapezoidal Approximation: 8.38905609893065 Error: 2.0\n",
+      "Simpson Rule Approximation: 6.42072780425561 Error: 0.031671705324959554\n",
+      "Simpson Fraction Rule Approximation: 6.403315476536052 Error: 0.014259377605401191\n",
+      "Boole Rule Approximation: 6.389242345494339 Error: 0.00018624656368881887\n",
+      "\n"
      ]
     }
    ],
@@ -225,6 +273,134 @@
     "    println(\"Simpson Rule Approximation: \", simpson_rule_approximation, \" Error: \", abs(real_value - simpson_rule_approximation))\n",
     "    println(\"Simpson Fraction Rule Approximation: \", simpson_fraction_rule_approximation, \" Error: \", abs(real_value - simpson_fraction_rule_approximation)) \n",
     "    println(\"Boole Rule Approximation: \", boole_rule_approximation, \" Error: \", abs(real_value - boole_rule_approximation))\n",
+    "    println()\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "trapezoidal_composite (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function trapezoidal_composite(f::Function, x0::Float64, x1::Float64, epsilon::Float64)::Float64\n",
+    "\n",
+    "    xs = [x for x in x0:epsilon:x1]\n",
+    "\n",
+    "    integral = 0.0\n",
+    "\n",
+    "    for i in 2:length(xs) - 1\n",
+    "        integral += 2*f(xs[i])\n",
+    "    end\n",
+    "    \n",
+    "    integral += f(x0) + f(x1)\n",
+    "    integral *= (epsilon/2)\n",
+    "\n",
+    "    return integral\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "simpson_composite (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function simpson_composite(f::Function, x0::Float64, x1::Float64, epsilon::Float64)::Float64\n",
+    "\n",
+    "    xs = [x for x in x0:epsilon:x1]\n",
+    "    n = length(xs)\n",
+    "\n",
+    "    integral = 0.0\n",
+    "\n",
+    "    #this does not follow the literal formula in the slides, but it is equivalent\n",
+    "    #it's just adapted to the way the xs are generated\n",
+    "    for i in 2:n-1\n",
+    "        if i % 2 != 0\n",
+    "            integral += 2*f(xs[i])\n",
+    "        else\n",
+    "            integral += 4*f(xs[i])\n",
+    "        end\n",
+    "    end\n",
+    "    \n",
+    "    integral += f(x0) + f(x1)\n",
+    "    integral *= (epsilon/3)\n",
+    "\n",
+    "    return integral\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual Integral: 2.6666666666666665\n",
+      "Trapezoidal Composite Approximation: 2.75 Error: 0.08333333333333348\n",
+      "Simpson Composite Approximation: 2.6666666666666665 Error: 0.0\n",
+      "\n",
+      "Actual Integral: 6.4\n",
+      "Trapezoidal Composite Approximation: 7.0625 Error: 0.6624999999999996\n",
+      "Simpson Composite Approximation: 6.416666666666666 Error: 0.01666666666666572\n",
+      "\n",
+      "Actual Integral: 1.0986122886681098\n",
+      "Trapezoidal Composite Approximation: 1.1166666666666665 Error: 0.018054377998556692\n",
+      "Simpson Composite Approximation: 1.0999999999999999 Error: 0.0013877113318900847\n",
+      "\n",
+      "Actual Integral: 2.957885715089195\n",
+      "Trapezoidal Composite Approximation: 2.9765285888024398 Error: 0.01864287371324469\n",
+      "Simpson Composite Approximation: 2.957955601362256 Error: 6.988627306103723e-5\n",
+      "\n",
+      "Actual Integral: 1.4161468365471424\n",
+      "Trapezoidal Composite Approximation: 1.3865201117144974 Error: 0.029626724832644946\n",
+      "Simpson Composite Approximation: 1.416653582879084 Error: 0.0005067463319416987\n",
+      "\n",
+      "Actual Integral: 6.38905609893065\n",
+      "Trapezoidal Composite Approximation: 6.521610109481282 Error: 0.13255401055063132\n",
+      "Simpson Composite Approximation: 6.391210186666918 Error: 0.0021540877362680177\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "x0 = 0.0\n",
+    "x1 = 2.0\n",
+    "epsilon = 0.5\n",
+    "\n",
+    "for f in zip(fs, fs_int)\n",
+    "    f, f_int = f\n",
+    "\n",
+    "    real_value = f_int(x1) - f_int(x0)\n",
+    "    trapezoidal_comp_approximation = trapezoidal_composite(f, x0, x1, epsilon)\n",
+    "    simpson_comp_approximation = simpson_composite(f, x0, x1, epsilon)\n",
+    "\n",
+    "    println(\"Actual Integral: \", f_int(x1) - f_int(x0))\n",
+    "    println(\"Trapezoidal Composite Approximation: \", trapezoidal_comp_approximation, \" Error: \", abs(real_value - trapezoidal_comp_approximation))\n",
+    "    println(\"Simpson Composite Approximation: \", simpson_comp_approximation, \" Error: \", abs(real_value - simpson_comp_approximation))\n",
     "    println()\n",
     "end"
    ]
