--- a/numerico/taller2/taller2solucion_new.ipynb
+++ b/numerico/taller2/taller2solucion_new.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "bisection (generic function with 1 method)"
+       "RKsystem (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -25,7 +25,8 @@
     "include(\"error_metrics.jl\")\n",
     "include(\"interpolations.jl\")\n",
     "include(\"initial_value_problems.jl\")\n",
-    "include(\"root_finding_algorithms.jl\")"
+    "include(\"root_finding_algorithms.jl\")\n",
+    "include(\"initial_value_problems_system.jl\")"
    ]
   },
   {
@@ -2345,10 +2346,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 3)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0 0.0 0.0]\n"
+     ]
+    },
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: Cannot `convert` an object of type Nothing to an object of type Tuple{Vector{Float64}, Vector{Float64}}\n\nClosest candidates are:\n  convert(::Type{T}, !Matched::T) where T<:Tuple\n   @ Base essentials.jl:411\n  convert(::Type{T}, !Matched::Tuple{Vararg{Any, N}}) where {N, T<:Tuple}\n   @ Base essentials.jl:412\n  convert(::Type{T}, !Matched::CartesianIndex) where T<:Tuple\n   @ Base multidimensional.jl:128\n  ...\n",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: Cannot `convert` an object of type Nothing to an object of type Tuple{Vector{Float64}, Vector{Float64}}\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  convert(::Type{T}, !Matched::T) where T<:Tuple\n",
+      "   @ Base essentials.jl:411\n",
+      "  convert(::Type{T}, !Matched::Tuple{Vararg{Any, N}}) where {N, T<:Tuple}\n",
+      "   @ Base essentials.jl:412\n",
+      "  convert(::Type{T}, !Matched::CartesianIndex) where T<:Tuple\n",
+      "   @ Base multidimensional.jl:128\n",
+      "  ...\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] RKsystem(fns::Vector{Function}, x0::Float64, y0::Float64, h::Float64, tol::Float64; error_type::Bool, parade_condition::Nothing)\n",
+      "   @ Main ~/Documents/univ/8tavoSemestre/numerico/taller2/initial_value_problems_system.jl:22\n",
+      " [2] RKsystem(fns::Vector{Function}, x0::Float64, y0::Float64, h::Float64, tol::Float64)\n",
+      "   @ Main ~/Documents/univ/8tavoSemestre/numerico/taller2/initial_value_problems_system.jl:6\n",
+      " [3] top-level scope\n",
+      "   @ ~/Documents/univ/8tavoSemestre/numerico/taller2/taller2solucion_new.ipynb:1"
+     ]
+    }
+   ],
+   "source": [
+    "RKsystem([y′, fn2], 0.0, 0.1, 0.001, 0.0001)"
+   ]
   },
   {
    "cell_type": "markdown",
