--- a/numerico/clase13P3/jacobi.ipynb
+++ b/numerico/clase13P3/jacobi.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "jacobi (generic function with 1 method)"
+       "iterative_refinement (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -16,7 +16,7 @@
     }
    ],
    "source": [
-    "include(\"jacobi.jl\")"
+    "include(\"iterative_methods.jl\")"
    ]
   },
   {
@@ -28,10 +28,10 @@
      "data": {
       "text/plain": [
        "4-element Vector{Float64}:\n",
-       "  0.6000000000000001\n",
-       "  2.272727272727273\n",
-       " -1.1\n",
-       "  1.875"
+       "  0.9999999398374981\n",
+       "  2.0000000983782202\n",
+       " -1.0000000767014612\n",
+       "  1.0000001117564756"
       ]
      },
      "metadata": {},
@@ -44,8 +44,72 @@
     "      2 -1 10 -1;\n",
     "      0  3 -1  8]\n",
     "b = [6, 25, -11, 15]\n",
+    "x = [0, 0, 0, 0]\n",
+    "tol = 1e-6\n",
     "\n",
-    "jacobi(A, b)"
+    "jacobi(A, b, x, tol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Float64}:\n",
+       "  1.0000000442852197\n",
+       "  1.9999999946606366\n",
+       " -1.0000000129277868\n",
+       "  1.0000000003862881"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A = [10 -1  2  0;\n",
+    "     -1 11 -1  3;\n",
+    "      2 -1 10 -1;\n",
+    "      0  3 -1  8]\n",
+    "b = [6, 25, -11, 15]\n",
+    "x = [0, 0, 0, 0]\n",
+    "tol = 1e-6\n",
+    "\n",
+    "gauss_siedel(A, b, x, tol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Float64}:\n",
+       "  1.0\n",
+       "  1.9999999999999998\n",
+       " -1.0\n",
+       "  1.0000000000000002"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A = [10 -1  2  0;\n",
+    "     -1 11 -1  3;\n",
+    "      2 -1 10 -1;\n",
+    "      0  3 -1  8]\n",
+    "b = [6, 25, -11, 15]\n",
+    "x = [0, 0, 0, 0]\n",
+    "tol = 1e-6\n",
+    "\n",
+    "iterative_refinement(A, b, x, tol)"
    ]
   }
  ],
