--- a/numerico/taller3/taller3solucion.ipynb
+++ b/numerico/taller3/taller3solucion.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "direct_matrix_solution (generic function with 1 method)"
+       "gauss_siedel (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -16,7 +16,8 @@
     }
    ],
    "source": [
-    "include(\"systems.jl\")"
+    "include(\"systems.jl\")\n",
+    "include(\"iterative_methods.jl\")"
    ]
   },
   {
@@ -334,10 +335,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " 319.49652777777777\n",
+       " 226.0926783264746\n",
+       " 320.5977794924554"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A = [15 -3 -1; -3 18 -6; -4 -1 12]\n",
+    "b = vec([3800 1200 2350])\n",
+    "x = vec([0 0 0])\n",
+    "tol = 0.01\n",
+    "\n",
+    "ans1 = jacobi(A, b, x, tol, is_absolute = false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " 319.32535718746294\n",
+       " 226.54018661320117\n",
+       " 321.15346794692107"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A = [15 -3 -1; -3 18 -6; -4 -1 12]\n",
+    "b = vec([3800 1200 2350])\n",
+    "x = vec([0 0 0])\n",
+    "tol = 0.01\n",
+    "\n",
+    "ans2 = gauss_siedel(A, b, x, tol, is_absolute = false)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,10 +397,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.01"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A = [2 -6 -1; -3 -1 7; -8 1 -2]\n",
+    "b = vec([-38 -34 -20])\n",
+    "x = vec([0 0 0])\n",
+    "tol = 0.01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2B.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The method did not converge in the given range of max iterations"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " NaN\n",
+       " NaN\n",
+       " NaN"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ans3 = jacobi(A, b, x, tol, is_absolute = false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The method did not converge in the given range of max iterations"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Float64}:\n",
+       " NaN\n",
+       " NaN\n",
+       " NaN"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ans4 = gauss_siedel(A, b, x, tol, is_absolute = false)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2B.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.01"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A = [0 -3 7; 1 2 -1; 5 -2 0]\n",
+    "b = vec([2 3 2])\n",
+    "x = vec([0 0 0])\n",
+    "tol = 0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LAPACKException",
+     "evalue": "LAPACKException(1)",
+     "output_type": "error",
+     "traceback": [
+      "LAPACKException(1)\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] chklapackerror\n",
+      "   @ /usr/share/julia/stdlib/v1.9/LinearAlgebra/src/lapack.jl:40 [inlined]\n",
+      " [2] trtrs!(uplo::Char, trans::Char, diag::Char, A::Matrix{Float64}, B::Matrix{Float64})\n",
+      "   @ LinearAlgebra.LAPACK /usr/share/julia/stdlib/v1.9/LinearAlgebra/src/lapack.jl:3424\n",
+      " [3] ldiv!\n",
+      "   @ /usr/share/julia/stdlib/v1.9/LinearAlgebra/src/triangular.jl:727 [inlined]\n",
+      " [4] inv(A::UpperTriangular{Float64, Matrix{Float64}})\n",
+      "   @ LinearAlgebra /usr/share/julia/stdlib/v1.9/LinearAlgebra/src/triangular.jl:809\n",
+      " [5] inv(A::Matrix{Float64})\n",
+      "   @ LinearAlgebra /usr/share/julia/stdlib/v1.9/LinearAlgebra/src/dense.jl:913\n",
+      " [6] jacobi(A::Matrix{Int64}, b::Vector{Int64}, x::Vector{Int64}, tol::Float64; is_absolute::Bool, max_iters::Int64)\n",
+      "   @ Main ~/Documents/univ/8tavoSemestre/numerico/taller3/iterative_methods.jl:46\n",
+      " [7] top-level scope\n",
+      "   @ ~/Documents/univ/8tavoSemestre/numerico/taller3/taller3solucion.ipynb:1"
+     ]
+    }
+   ],
+   "source": [
+    "ans5 = jacobi(A, b, x, tol, is_absolute = false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LAPACKException",
+     "evalue": "LAPACKException(1)",
+     "output_type": "error",
+     "traceback": [
+      "LAPACKException(1)\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] chklapackerror\n",
+      "   @ /usr/share/julia/stdlib/v1.9/LinearAlgebra/src/lapack.jl:40 [inlined]\n",
+      " [2] trtrs!(uplo::Char, trans::Char, diag::Char, A::Matrix{Float64}, B::Matrix{Float64})\n",
+      "   @ LinearAlgebra.LAPACK /usr/share/julia/stdlib/v1.9/LinearAlgebra/src/lapack.jl:3424\n",
+      " [3] ldiv!\n",
+      "   @ /usr/share/julia/stdlib/v1.9/LinearAlgebra/src/triangular.jl:727 [inlined]\n",
+      " [4] inv(A::LowerTriangular{Float64, Matrix{Float64}})\n",
+      "   @ LinearAlgebra /usr/share/julia/stdlib/v1.9/LinearAlgebra/src/triangular.jl:805\n",
+      " [5] inv(A::Matrix{Float64})\n",
+      "   @ LinearAlgebra /usr/share/julia/stdlib/v1.9/LinearAlgebra/src/dense.jl:915\n",
+      " [6] gauss_siedel(A::Matrix{Int64}, b::Vector{Int64}, x::Vector{Int64}, tol::Float64; is_absolute::Bool, max_iters::Int64)\n",
+      "   @ Main ~/Documents/univ/8tavoSemestre/numerico/taller3/iterative_methods.jl:92\n",
+      " [7] top-level scope\n",
+      "   @ ~/Documents/univ/8tavoSemestre/numerico/taller3/taller3solucion.ipynb:1"
+     ]
+    }
+   ],
+   "source": [
+    "ans6 = gauss_siedel(A, b, x, tol, is_absolute = false)"
+   ]
   },
   {
    "cell_type": "markdown",
