--- a/numerico/proyecto/main.ipynb
+++ b/numerico/proyecto/main.ipynb
@@ -2,15 +2,151 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "function second_order_finite_difference(M::Matrix, i, j, Δx)\n",
+    "    return (M[i+1, j] - 2*M[i, j] + M[i-1, j])/Δx^2\n",
+    "end\n",
+    "\n",
+    "function second_order_finite_difference(M::Matrix, i, j, Δx, Δy)\n",
+    "    return (M[i+1, j+1] - M[i+1, j-1] - M[i-1, j+1] + M[i-1, j-1])/(4*Δx*Δy)\n",
+    "end\n",
+    "\n",
+    "function second_order_finite_difference_more_precise(M::Matrix, i, j, Δx)\n",
+    "    return (-M[i+2, j] + 16*M[i+1, j] - 30*M[i, j] + 16*M[i-1, j] - M[i-2, j])/(12*Δx^2)\n",
+    "end\n",
+    "\n",
+    "function second_order_finite_difference_more_precise(M::Matrix, i, j, Δx, Δy)\n",
+    "    return (-M[i+2, j+2] + 8*M[i+2, j] - 8*M[i+2, j] + M[i+2, j-2] + 8*M[i+1, j+1] - 64*M[i+1, j] + 8*M[i+1, j-1] - 8*M[i, j+2] + 8*M[i, j-2] + 64*M[i, j] - 8*M[i-1, j+1] + 64*M[i-1, j] - 8*M[i-1, j-1] + M[i-2, j+2] - 8*M[i-2, j] + 8*M[i-2, j] - M[i-2, j-2])/(144*Δx*Δy)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Estado estacionario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Parameters:\\n\\n    -L: Lenght of the surface (in meters).\\n    -T: Total time of the simulation (in seconds).\\n    -N: Number of points in the discretization, for both space and time.\\n    -\\alpha: Thermal diffusivity (in m^2/s).\\n    -temp_bound: Initial temperature at the boundaries (in Celsius).\\n    -temp_init: Initial temperature of the surface (in Celsius).\\n\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "function boundary_conditions(A::Matrix,\n",
+    "                             b::Vector,\n",
+    "                             α::Real,\n",
+    "                             temp_bound::Real,\n",
+    "                             temp_init::Real,\n",
+    "                             boundary::String,\n",
+    "                             boundary_value::Real)\n",
+    "    \"\"\"\n",
+    "    Input:\n",
+    "    --------\n",
+    "\n",
+    "        -A: Matrix of the system of equations.\n",
+    "        -b: Vector of the system of equations.\n",
+    "        -\\alpha: Thermal diffusivity (in m^2/s).\n",
+    "        -temp_bound: Initial temperature at the boundaries (in Celsius).\n",
+    "        -temp_init: Initial temperature of the surface (in Celsius).\n",
+    "\n",
+    "        -boundary: Boundary condition. It can be 'Dirichlet' or 'Neumann'.\n",
+    "        -boundary_value: Value of the boundary condition (in Celsius).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Number of points in the discretization\n",
+    "    N = size(A)[1]\n",
+    "\n",
+    "    # Fill the matrix\n",
+    "    if boundary == \"Dirichlet\"\n",
+    "        A[1, 1] = 1\n",
+    "        A[N, N] = 1\n",
+    "        b[1] = temp_bound\n",
+    "        b[N] = temp_bound\n",
+    "    elseif boundary == \"Neumann\"\n",
+    "        A[1, 1] = -1\n",
+    "        A[1, 2] = 1\n",
+    "        A[N, N] = -1\n",
+    "        A[N, N-1] = 1\n",
+    "        b[1] = 0\n",
+    "        b[N] = 0\n",
+    "    end\n",
+    "\n",
+    "    return A, b\n",
+    "end \n",
+    "\n",
+    "\n",
+    "\n",
+    "function build_matrix(L::Real,\n",
+    "                      T::Real,\n",
+    "                      N::Real,\n",
+    "                      α::Real,\n",
+    "                      temp_bound::Real,\n",
+    "                      temp_init::Real,\n",
+    "                      boundary::String,\n",
+    "                      boundary_value::Real)\n",
+    "    \"\"\"\n",
+    "    Input:\n",
+    "    --------\n",
+    "\n",
+    "        -L: Lenght of the surface (in meters).\n",
+    "        -T: Total time of the simulation (in seconds).\n",
+    "        -N: Number of points in the discretization, for both space and time.\n",
+    "        -\\alpha: Thermal diffusivity (in m^2/s).\n",
+    "        -temp_bound: Initial temperature at the boundaries (in Celsius).\n",
+    "        -temp_init: Initial temperature of the surface (in Celsius).\n",
+    "\n",
+    "        -boundary: Boundary condition. It can be 'Dirichlet' or 'Neumann'.\n",
+    "        -boundary_value: Value of the boundary condition (in Celsius).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Discretization\n",
+    "    Δx = L/N\n",
+    "    Δt = T/N\n",
+    "\n",
+    "    # Number of points in the discretization\n",
+    "    N = Int(N)\n",
+    "\n",
+    "    # Build the matrix\n",
+    "    A = zeros(N,N)\n",
+    "    b = zeros(N)\n",
+    "\n",
+    "    # Fill the matrix (this modifies in place the matrix A and the vector b)\n",
+    "    boundary_conditions(A, b, α, temp_bound, temp_init, boundary, boundary_value)\n",
+    "\n",
+    "    # Fill the matrix (this modifies in place the matrix A and the vector b)\n",
+    "\n",
+    "\n",
+    "end\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Julia 1.9.2",
+   "language": "julia",
+   "name": "julia-1.9"
+  },
   "language_info": {
-   "name": "python"
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.9.3"
   },
   "orig_nbformat": 4
  },
